[package]
name = "json-e"
version = "0.1.0"
authors = ["owlishDeveloper <bugzeeeeee@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
serde_json = "1.0.57"
thiserror = "1.0"
nom = "5.1.2"
lazy_static = "1.4.0"

[build-dependencies]
yaml-rust = "0.4"
# TODO: replace with serde_json
json = "0.12.4"
